# Store-Management-System

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  tarpaulin-report.html
.github/workflows/: new_code_action.yml
cursive_client/: Cargo.toml
cursive_client/src/: main.rs  main_test.rs  register.rs
database/scripts/: creation_script.sql
database/test_scripts/: test_creation_script.sql
docs/: Arc42.md  tech_stack_choice.md
docs/ADR/: adr_template.md  language_platform_choice.md
docs/ADR/iteration1/: database_choice.md  language_platform_choice.md  tech_stack_choice.md
docs/ADR/iteration2/: api_architecture_style_choice.md
docs/diagram/iteration1/: SequenceDiagram.md
rocket_api/: Cargo.toml  Dockerfile  docker-compose.yml  nginx.conf  prometheus.yml
rocket_api/src/: cache_controller.rs  lib.rs  main.rs  route.rs  server.rs
rocket_api/src/controller/: authentification_controller.rs  mod.rs  product_controller.rs  sale_controller.rs  sale_item_controller.rs
rocket_api/src/database/: database_connection_pool.rs  mod.rs
rocket_api/tests/: authentification_controller_test.rs  load_testing.js  product_controller_test.rs  sale_controller_test.rs  sale_item_controller_test.rs
shared/: Cargo.toml
shared/src/: api_response.rs  lib.rs
shared/src/model/: mod.rs  product.rs  sale.rs  sale_item.rs  store_account.rs
shared/src/schema/: mod.rs  product_schema.rs  sale_schema.rs  store_account_schema.rs
sql/: product_test_creation.sql  sale_test_creation.sql
src/: main.rs  main_test.rs  register.rs
src/model/: mod.rs  product.rs  sale.rs  sale_item.rs
src/schema/: mod.rs  sale_item_schema.rs  sale_schema.rs
