[package]
name = "cursive_client"
version = "1.0.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
cursive = "0.21"
diesel = { version = "2.2.0", features = ["postgres"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }