[package]
name = "rocket_server"
version = "1.0.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
rocket = { version = "0.5.1",  features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"