[package]
name = "rocket_server"
version = "1.0.0"
edition = "2024"

[lib]
name = "rocket_api"
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
rocket = { version = "0.5.1",  features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
dotenv = "0.15.0"
cargo-tarpaulin = "0.32.5"
rocket_cors = "0.6.0"
moka = { version = "0.12", features = ["future"] }
