[package]
name = "shared"
version = "1.0.0"
edition = "2024"

[dependencies]
cursive = "0.21"
diesel = { version = "2.2.0", features = ["postgres"] }
rocket = { version = "0.5.1",  features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
schemars = "0.8.22"